--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -44,74 +44,75 @@
 
 
 
-            <TextView
-                android:id="@+id/lb_notification"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
+<!--            <TextView-->
+<!--                android:id="@+id/lb_notification"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                -->
 
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="@dimen/padding"
-                android:layout_marginRight="@dimen/padding"
-                android:fontFamily="@font/cabin_condensed_regular"
-                android:textColor="@color/white_50"
-                android:gravity="bottom"
-                android:padding="@dimen/padding"
-                android:textSize="18sp"
-                android:text="@string/Notifications"
-                />
+<!--                android:layout_alignParentLeft="true"-->
+<!--                android:layout_marginLeft="@dimen/padding"-->
+<!--                android:layout_marginRight="@dimen/padding"-->
+<!--                android:fontFamily="@font/cabin_condensed_regular"-->
+<!--                android:textColor="@color/white_50"-->
+<!--                android:gravity="bottom"-->
+<!--                android:padding="@dimen/padding"-->
+<!--                android:textSize="18sp"-->
+<!--                android:text="@string/Notifications"-->
+<!--                />-->
 
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switch_notification"
-                style="@style/MySwitch"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignTop="@id/lb_notification"
-                android:layout_alignBottom="@id/lb_notification"
-                android:layout_alignParentRight="true"
-                android:layout_marginLeft="@dimen/padding"
-                android:layout_marginRight="@dimen/padding"
-                android:checked="@={viewModel.switch.click}"
+<!--            <androidx.appcompat.widget.SwitchCompat-->
+<!--                android:id="@+id/switch_notification"-->
+<!--                style="@style/MySwitch"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_alignTop="@id/lb_notification"-->
+<!--                android:layout_alignBottom="@id/lb_notification"-->
+<!--                android:layout_alignParentRight="true"-->
+<!--                android:layout_marginLeft="@dimen/padding"-->
+<!--                android:layout_marginRight="@dimen/padding"-->
+<!--                android:checked="@={viewModel.switch.click}"-->
 
-                android:gravity="center"
-                android:textOff="@string/off"
-                android:textOn="@string/on"
-                 />
+<!--                android:gravity="center"-->
+<!--                android:textOff="@string/off"-->
+<!--                android:textOn="@string/on"-->
+<!--                 />-->
 
-            <TextView
-                android:id="@+id/lbNightMode"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:layout_below="@id/lb_notification"
+<!--            <TextView-->
+<!--                android:id="@+id/lbNightMode"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_below="@id/lb_notification"-->
 
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="@dimen/padding"
-                android:layout_marginRight="@dimen/padding"
-                android:fontFamily="@font/cabin_condensed_regular"
-                android:textColor="@color/white_50"
-                android:gravity="bottom"
-                android:padding="@dimen/padding"
-                android:textSize="18sp"
-                android:text="@string/night_mode"
-                android:visibility="gone"
-                />
+<!--                android:layout_alignParentLeft="true"-->
+<!--                android:layout_marginLeft="@dimen/padding"-->
+<!--                android:layout_marginRight="@dimen/padding"-->
+<!--                android:fontFamily="@font/cabin_condensed_regular"-->
+<!--                android:textColor="@color/white_50"-->
+<!--                android:gravity="bottom"-->
+<!--                android:padding="@dimen/padding"-->
+<!--                android:textSize="18sp"-->
+<!--                android:text="@string/night_mode"-->
+<!--                android:visibility="gone"-->
+<!--                />-->
 
-            <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/switchNightMode"
-                style="@style/MySwitch"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignTop="@id/lbNightMode"
-                android:layout_alignBottom="@id/lbNightMode"
-                android:layout_alignParentRight="true"
-                android:layout_marginLeft="@dimen/padding"
-                android:layout_marginRight="@dimen/padding"
-                android:checked="@={viewModel.switch.click}"
+<!--            <androidx.appcompat.widget.SwitchCompat-->
+<!--                android:id="@+id/switchNightMode"-->
+<!--                style="@style/MySwitch"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_alignTop="@id/lbNightMode"-->
+<!--                android:layout_alignBottom="@id/lbNightMode"-->
+<!--                android:layout_alignParentRight="true"-->
+<!--                android:layout_marginLeft="@dimen/padding"-->
+<!--                android:layout_marginRight="@dimen/padding"-->
+<!--                android:checked="@={viewModel.switch.click}"-->
 
-                android:gravity="center"
-                android:textOff="@string/off"
-                android:textOn="@string/on"
-                android:visibility="gone"
-                />
+<!--                android:gravity="center"-->
+<!--                android:textOff="@string/off"-->
+<!--                android:textOn="@string/on"-->
+<!--                android:visibility="gone"-->
+<!--                />-->
 
 
 
@@ -120,9 +121,8 @@
                 android:id="@+id/lbPrivacy"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/lb_notification"
                 android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
+
                 android:layout_marginLeft="@dimen/padding"
                 android:layout_marginRight="@dimen/padding"
                 android:fontFamily="@font/cabin_condensed_regular"
