--- a/app/src/main/res/layout/bottom_navigation.xml
+++ b/app/src/main/res/layout/bottom_navigation.xml
@@ -44,11 +44,11 @@
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="wrap_content"
+                android:layout_width="26dp"
                 android:layout_height="@dimen/bottom_navigation_icon"
                 android:layout_marginBottom="@dimen/bottom_navigation_icon_marginBottom"
                 android:tint="@color/bottom_item_bg"
-                android:src="@drawable/ic_home_black_36dp"
+                android:src="@drawable/ic_notification"
                 viewSelected="@{viewModel.homeSelected}"
 
 
@@ -61,7 +61,7 @@
                 android:textColor="@color/bottom_item_text_bg"
                 android:textSize="@dimen/bottom_navigation_title_textSize"
                 viewSelected="@{viewModel.homeSelected}"
-                android:text="@string/home" />
+                android:text="@string/daily" />
         </LinearLayout>
             <LinearLayout
                 android:layout_width="0dp"
