--- a/app/src/main/res/layout/fragment_daily_feed.xml
+++ b/app/src/main/res/layout/fragment_daily_feed.xml
@@ -51,6 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:theme="@style/CustomProgressBarTheme"
 
                 android:indeterminate="true"
                 android:visibility="gone" />
