--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -38,10 +38,11 @@
         android:id="@+id/subject_card_title"
         style="@style/SubjectTextLabel"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left|bottom"
+        android:layout_height="match_parent"
+        android:gravity="left|bottom"
         android:background="@drawable/subject_card_gradient_background"
         android:text="@{item.cat_name}"
+        tools:text="abcd"
 
         android:fontFamily="@font/cabin_condensed_bold"
         android:maxWidth="@dimen/subject_card_height" />
