--- a/app/src/main/res/layout/item_video_list.xml
+++ b/app/src/main/res/layout/item_video_list.xml
@@ -79,6 +79,7 @@
                 android:layout_height="24dp"
                 android:layout_marginEnd="32dp"
                 android:layout_marginStart="8dp"
+                android:padding="2dp"
 
                 tools:src="@drawable/ic_like"
                 android:tint="@color/white_75"
@@ -88,19 +89,55 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/imglike"
+                app:layout_constraintEnd_toStartOf="@id/imgViews"
                 />
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginEnd="8dp"
+                android:padding="2dp"
+
+                android:src="@drawable/ic_time"
+
+                android:tint="@color/white_75"
+                android:id="@+id/imgViews"
+
+
+                goneUnless="@{!TextUtils.isEmpty(item.duration)}"
+
+
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/tvViewCount"
+
+                app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:id="@+id/tvViewCount"
+
+                tools:text="22"
+
+                android:layout_marginEnd="16dp"
+                android:gravity="center"
+                android:text="@{item.duration}"
+                goneUnless="@{!TextUtils.isEmpty(item.duration)}"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/imglike"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:textColor="@color/light_gray"
+                android:layout_height="wrap_content" />
 
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="8dp"
 
-                android:src="@drawable/ic_time"
+
+                android:src="@drawable/ic_visibility"
                 android:tint="@color/white_75"
                 android:id="@+id/imglike"
 
-                goneUnless="@{!TextUtils.isEmpty(item.duration)}"
+                goneUnless="@{!TextUtils.isEmpty(item.formatViews())}"
 
 
 
@@ -116,8 +153,8 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="16dp"
                 android:gravity="center"
-                android:text="@{item.duration}"
-                goneUnless="@{!TextUtils.isEmpty(item.duration)}"
+                android:text="@{item.formatViews()}"
+                goneUnless="@{!TextUtils.isEmpty(item.formatViews())}"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:textColor="@color/light_gray"
