--- a/app/src/main/res/layout/item_local_post.xml
+++ b/app/src/main/res/layout/item_local_post.xml
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:onClick="@{()->viewModel.onItemClick(item)}"
         android:layout_marginEnd="8dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
