--- a/app/src/main/res/layout/item_quote_list.xml
+++ b/app/src/main/res/layout/item_quote_list.xml
@@ -36,7 +36,7 @@
                 android:alpha="0.8"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
-                app:srcImageUrl="@{item.imageUrl}"
+                app:srcImageBitmapUrl="@{item.imageUrl}"
 
 
                 />
@@ -102,8 +102,8 @@
 
             <ImageView
                 android:id="@+id/imgShare"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="8dp"
                 android:onClick="@{(view)->viewModel.shareClick(view,item)}"
@@ -112,12 +112,17 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:paddingTop="3dp"
+                android:paddingBottom="3dp"
+                android:scaleType="fitCenter"
                 />
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="32dp"
                 android:src='@{item.liked?@drawable/ic_liked:@drawable/ic_like}'
                 android:tint="@color/white_75"
                 android:id="@+id/imglike"
@@ -125,7 +130,7 @@
 
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/tvLinkCount"
-
+                 tools:src="@drawable/ic_like"
                 app:layout_constraintTop_toTopOf="parent" />
             <TextView
                 android:layout_width="wrap_content"
