--- a/app/src/main/res/layout/item_slide_post.xml
+++ b/app/src/main/res/layout/item_slide_post.xml
@@ -52,6 +52,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/margin_base"
                 android:text="@{item.catName}"
+                android:layout_marginTop="8dp"
                 android:onClick="@{()->viewModel.catClick(item.catId)}"
                 android:textSize="@dimen/feed_carousel_slide_tag_textSize" />
 
