--- a/app/src/main/res/layout/toolbar_quote.xml
+++ b/app/src/main/res/layout/toolbar_quote.xml
@@ -8,8 +8,10 @@
         <variable
             name="listener"
             type="com.applifehack.knowledge.ui.widget.listener.ToolbarQuoteListener">
-
         </variable>
+        <variable
+            name="viewModel"
+            type="com.applifehack.knowledge.ui.activity.quotes.QuotesVM" />
 
         <variable
             name="category"
@@ -24,7 +26,7 @@
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/black"
+        android:background="@color/color_transparent"
         android:contentInsetStart="0dp"
         android:contentInsetEnd="0dp"
         android:contentInsetRight="0dp"
@@ -33,7 +35,6 @@
         app:contentInsetRight="0dp"
         app:contentInsetStart="0dp"
         style="?attr/toolbarStyle"
-
 
 
         >
@@ -54,7 +55,21 @@
                 android:src="@drawable/ic_arrow_back_white_24dp"
                 android:onClick="@{()->listener.back()}"
                 />
+            <TextView
+                android:id="@+id/tvTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:layout_gravity="center"
+                android:fontFamily="@font/roboto"
+                android:gravity="center"
+                android:minWidth="?attr/actionBarSize"
 
+                android:textColor="@color/white_75"
+                android:textSize="16sp"
+
+
+                tools:text="title bar" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -68,7 +83,11 @@
                 android:drawablePadding="8dp"
                 android:layout_centerInParent="true"
                 android:layout_height="wrap_content"
+                android:padding="8dp"
+
                 android:textColor="@color/white_75"
+                android:textSize="14sp"
+
 
                 />
 
