--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -166,4 +166,9 @@
     <style name="CustomProgressBarTheme">
         <item name="colorAccent">#46bdbf</item>
     </style>
+
+    <style name="AppTheme.TabLayout" parent="Widget.MaterialComponents.TabLayout">
+        <item name="android:background">@null</item>
+        <item name="tabIndicatorColor">@color/bright_blue</item>
+    </style>
 </resources>
